# metrics_collector

./: CMakeLists.txt  README.md  main.cpp
include/: metrics_producer.h  mmf.h  perf_executor.h  perf_interface.h  perf_task.h
src/: CMakeLists.txt  main.cpp  mmf.cpp
